# zahar-berkut-expert

./: README.md  STORY.md  chain_factory.py  chunk_utilization.py  main.py  observability.db  pyproject.toml  rag_logger.py
.claude/: settings.local.json
eval/: dataset.json  judge_prompt.py  metrics.py  run_eval.py
eval/results/: eval_20260504_142204.json  eval_20260504_143733.json  eval_20260504_145145.json  eval_20260504_151925.json  eval_20260504_152324.json  eval_20260504_203650.json  eval_20260504_204335.json  eval_20260504_213641.json
qdrant_db/: meta.json
qdrant_db/collection/zahar_berkut/: storage.sqlite
